# abbots-morton-spaceport

./: .git-blame-ignore-revs  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  Abbreviations.md  CLAUDE.md  FONTLOG.md  HACKING.md  LEARNME.md  LICENSE-MIT.md  Makefile  README.md  SENIOR_PLAN.md  TODO.md  WHATNEXT-SIDEQUEST.md  WHATNEXT.md  build_font.py  conftest.py  extract_glyph.py  glyph_data.yaml  postscript_glyph_names.yaml  pyproject.toml
.claude/: settings.json
doc/: abbreviations.md  checking-data-expect-coverage.md  cleanup.md  core-idea.md  data-expect.md  glyph-names.md  historical-admonitions.md  isolation-leaks.md  joint-variant-invariants.md  leak-emergent-verdicts.txt  leak-investigation-findings.md  leak-prevention-plan.md  leak-triage.md  namer-dot-chrome-itemization.md  rebuild-design.md  shaping-leak-loop-runbook.md  span-wrapping.md
glyph_data/: composites.yaml  exotics.yaml  latin.yaml  latin_letters.yaml  latin_numbers.yaml  metadata.yaml  numbers.yaml  opentype-features.yaml  punctuation.yaml  quikscript.yaml  senior_quikscript_kerning.yaml  shavian.yaml
inspo/: postscript_glyph_names.yaml
prototype/: PLAN.md  REPORT.md  build.py  conform.py  coretext_smoke.py  coretext_smoke.swift  directwrite.md  emit.py  leak_demo.py  probe_supplementary.py  scale_stress.py  settle.py  smoke_sequences.txt  spec.py  table.py
rebuild/: BASELINE-PLAN.md  BASELINE-REPORT.md  M1-BATCH2-PROGRESS.md  M1-BATCH3-PROGRESS.md  M1-BATCH4-PROGRESS.md  M1-BATCH5-PROGRESS.md  M1-PLAN.md  M1-REPORT.md  POLICY-ROUND-1-PLAN.md  POLICY-ROUND-1-REPORT.md  POLICY-ROUND-2-REPORT.md  REVIEW-PLAN.md  REVIEW-REPORT.md  VERDICT-APPLICATION-PROGRESS.md  check_determinism.py  (+44 more)
(+280 files in other folders)
