[project]
name = "abbots-morton-spaceport"
version = "14.3.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fonttools>=4.61.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "uharfbuzz>=0.43.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.6.1",
    "livereload>=2.7.1",
    "pyright>=1.1.408",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["tools", "test"]
extraPaths = ["tools", "test"]
stubPath = "typings"
