[project]
name = "abbots-morton-spaceport"
version = "16.0.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fonttools>=4.61.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "uharfbuzz>=0.43.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.6.1",
    "livereload>=2.7.1",
    "pyright>=1.1.408",
    "pre-commit>=4.6.0",
    "ruamel.yaml>=0.18.0",
]

[tool.pytest.ini_options]
# `slow` covers the deep (~50 s) isolation-leak snapshot sweep; the default run skips it. `make test-leaks` runs it on its own.
markers = ["slow: expensive deep sweeps, excluded from the default test run"]
addopts = "-m 'not slow'"
# The Python suite lives in `test/`; the data-expect HTML corpora that the root `conftest.py` collects as shaping tests live in `site/`. Both must be on the collection path.
testpaths = ["test", "site"]

[tool.uv]
cache-dir = ".uv-cache"

[tool.black]
line-length = 110
target-version = ["py314"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["tools", "test", "conftest.py"]
extraPaths = ["tools", "test"]
stubPath = "typings"
